--- a/设计文档.md
+++ b/设计文档.md
@@ -2,7 +2,7 @@
 
 #### 1.1功能与要求
 
-该项目由为CS架构，分为客户端和服务端，用于实现多人在线语音聊天，具体需求如下。
+多人语音聊天室项目由为C/S架构，分为客户端和服务端，具体需求如下。
 
 **账号系统**
 
@@ -39,14 +39,15 @@
 
 #### 2.1网络模块
 
-由于音频占用带宽不大，项目暂定使用**tcp**协议保证可靠性，后续考虑高并发可替换为udp。
+由于音频占用带宽不大，项目暂定使用**udp**协议保证可靠性。
 
 定义函数：
 
-- 网络初始化init();
-- 连接到服务器connectToServer();
+- 网络初始化：init();
+- 连接到服务器：connectToServer();
 - 发送数据：sendData();
-- 每次发送的数据，要对不同的请求加入不同的头部，头部可以通过const完成定义。
+- 接受数据：recvData();
+- 退出服务器：DisconnectToServer();
 
 #### 2.2登录和注册界面
 
@@ -75,8 +76,6 @@ SIG_registerReq(QString name , QString passord);
 - 验证码防止脚本攻击
 - 记录上次登录ip，地址等进行安全提示
 - 手机验证码
-- 绑定微信扫一扫登录
-- 人脸识别。。。
 
 #### 2.3会议模块
 
@@ -88,6 +87,8 @@ SIG_registerReq(QString name , QString passord);
 ```
 SIG_createRoom();
 ```
+
+设置模块可以选择声音来源，调节自身音量等，均属于本地资源，和服务端没有交互。
 
 ##### 2.3.2加入房间
 
@@ -107,7 +108,7 @@ SIG_joinRoom(int num);
 
 ```c++
 SIG_quitRoom();//客户端向服务器发出退出信号
-SIG_clientQuit();//服务器向客户端发出某个客户端退出信号
+SLOT_clientQuit();//服务器向客户端发出某个客户端退出信号，在槽函数中处理。
 ```
 
 #### 2.4音频模块
@@ -139,7 +140,7 @@ SIG_clientQuit();//服务器向客户端发出某个客户端退出信号
 - 静音检测：
   -  静音检测通常也**集成在编码模块**中。**如果没有语音输入，可以在编码头部设置特殊字符来表示**。
 - 混音：
-  - 在视频会议中，多人同时发言时，我们需要同时播放来自于多个人的语音数据，**而声卡播放的缓冲区只有一个，所以，需要将多路语音混合成一路**，这就是混音算法要做的事情。
+  - 在视频会议中，多人同时发言时，我们需要同时播放来自于多个人的语音数据，**而声卡播放的缓冲区只有一个，所以，需要将多路语音混合成一路**。
 
 ##### 2.4.2带宽计算
 
@@ -150,7 +151,7 @@ SIG_clientQuit();//服务器向客户端发出某个客户端退出信号
 逻辑：
 
 - 客户端接收(read)到电脑内部的声音，利用定时器每隔50ms发送(write)缓冲区的数据给服务端；`readDataAndProcess()`
-- 客户端接收(read)到服务端发来数据，进行处理。`SLOT_PlayAudio()`
+- 客户端接收(read)到服务端发来数据，进行处理播放。`SLOT_PlayAudio()`
 - 服务端接收(read)到客户端发来的数据，处理后发送(write)给每一个客户端。
 
 调用QAudioInput库进行音频采集，QIODevice创建缓冲区数据保存。调用QTimer创建定时器，每50ms从缓冲区采集一次数据，进行优化处理（编码、回音消除、降噪等）后发送信号SIG_AudioDataReady给主函数，主函数定义槽SLOT_sendAudioData向服务端发送数据。
@@ -176,13 +177,68 @@ SLOT_PlayAudio();
 
 编解码考虑利用speex的库函数直接完成，静音和降噪考虑使用webrtc的库函数直接完成，混音考虑采用ffmpeg库函数直接完成。
 
-#### 2.5视频模块(TODO)
+#### 2.5数据传输格式
 
-##### 2.5.1基本流程和概念
+采用tcp协议，对每个请求包再次封装一个头部，服务端接收后根据头部字段分情况处理。
+
+#### 2.6客户端主函数
+
+客户端主函数设立多个槽函数，用来接收登录、注册、加入房间、退出房间信号，分别槽函数中将数据发送给服务端。
+
+设立信号SIG_readData(),设立槽函数SLOT_dealClientData()封装上述槽，一旦客户端收到服务端返回的数据，如用户声音、踢人、静音用户等，跳转到对应的槽函数中进行处理。
+
+下述槽函数均由客户端主界面的点击事件触发。
+
+```c++
+//客户端收到可读信号，触发SLOT_dealClientData槽函数，其中封装了下面的登录、注册等等各个槽函数。可用策略模式完成。
+SLOT_dealClientData();
+//登录槽函数，发送用户名、密码给服务端验证
+SLOT_loginSubmit();
+//注册槽函数，
+SLOT_registerSubmit();
+//创建房间槽函数
+SLOT_createRoomSubmit(int roomNum);
+//加入房间槽函数
+SLOT_joinRoomSubmit(int roomNum);
+//退出房间槽函数
+SLOT_quitRoomSubmit(int roomNum);
+//用户向服务端发出解除静音信号槽函数
+SLOT_UnMute();
+//关闭房间内指定用户的声音
+SLOT_MuteOneUser(int userId);
+//调节房间内指定用户的音量
+SLOT_AdjustUserVolume(int userId);
+
+//接收服务端的登录回复
+DealLoginResponse();
+//接收服务端的注册回复
+DealRegisterResponse();
+//创建房间回复
+DealCreateRoomResponse(int roomNum);
+//加入房间回复
+DealJoinRoomResponse(int roomNum);
+//退出房间回复
+DealQuitRoomResponse(int roomNum);
+//接收服务端发来的数据进行混音等操作，调用音频处理模块的SLOT_PlayAudio()。
+DealAudioData();
+//处理服务端发来的踢人处理结果,判断是否是自己。是自己调用退出房间函数。
+DealForceQuitRoom();
+//服务器向客户端发出某个客户端退出信号,在槽函数中处理，将客户端在线列表中的退出用户清除。
+DealClientQuitResponse();
+
+
+//音频模块每50ms从缓冲区收集数据，主函数获取数据后发送给服务端，调用QIODevice的start函数自动读取到缓冲区，然后调用write通过网络发送。SIG_AudioDataReady函数见2.4.3音频采集。
+connect(this, SIGNAL(SIG_AudioDataReady(QByteArray)), this, SLOT(SLOT_sendAudioData(QByteArray)) );
+SLOT_sendAudioData(QByteArray);
+```
+
+#### 2.7视频模块(TODO)
+
+##### 2.7.1基本流程和概念
 
 ![image-20210806171457257](C:\Users\user\Desktop\设计文档.assets\image-20210806171457257.png)
 
-##### 2.5.2带宽计算
+##### 2.7.2带宽计算
 
 ​        以1920x1080的1080p视频计算，需要1920×1080=2,073,600，大约200w像素点，每个像素点包含RGB3字节工24bit，因此总共49,766,400bit，约5.9MB。以24fps计算，约**1,194,393,600‬bit=149,299,200‬byte**（8bit 比特=1byte 字节），就是142MB。
 
@@ -194,152 +250,118 @@ SLOT_PlayAudio();
 
 如果要做的话可以考虑**opencv**，直接读取每一帧。
 
-#### 2.6退出检测(TODO)
+#### 2.8退出检测(TODO)
 
 用户掉线，无法发送退出信号，借鉴tcp定时检测机制。创建定时器，完成心跳检测。
 
-#### 2.7聊天、文件传输、断点续传(TODO)
-
-#### 2.8客户端主函数
-
-客户端主函数设立多个槽函数，用来接收登录、注册、加入房间、退出房间信号，分别槽函数中将数据发送给服务端。
-
-设立信号SIG_readData(),设立槽函数SLOT_dealClientData()封装上述槽，一旦客户端收到服务端返回的数据，跳转到对应的槽函数中进行处理。
-
-下述槽函数均由客户端主界面的点击事件触发。
-
-```c++
-//客户端收到可读信号，触发SLOT_dealClientData槽函数，其中封装了下面的登录、注册等等各个槽函数。可用策略模式完成。
-SLOT_dealClientData();
-//登录槽函数，发送用户名、密码给服务端验证
-SLOT_loginReq();
-//注册槽函数，发送用户名、密码给服务端验证
-SLOT_registerReq();
-//创建房间槽函数，发送房间号给服务端验证
-SLOT_createRoom();
-//加入房间槽函数，发送房间号给服务端验证
-SLOT_joinRoom(int num);
-//退出房间槽函数，发送房间号给服务端验证
-SLOT_quitRoom();
-//服务器向客户端发出某个客户端退出信号,在槽函数中处理，将客户端在线列表中的退出用户清除。
-SLOT_clientQuit();
-//音频模块每50ms从缓冲区收集数据，主函数获取数据后发送给服务端，调用QIODevice的start函数自动读取到缓冲区，然后调用write通过网络发送。SIG_AudioDataReady函数见2.4.3音频采集。
-connect(this, SIGNAL(SIG_AudioDataReady(QByteArray)), this, SLOT(SLOT_sendAudioData(QByteArray)) );
-SLOT_sendAudioData(QByteArray);
-//接收服务端发来的数据进行混音等操作，调用音频处理模块的SLOT_PlayAudio()。
-dealAudioData();
-```
+#### 2.9聊天、文件传输、断点续传(TODO)
 
 ### 三、服务器设计
 
-服务器模块包含三个部分：数据库、基于epoll的高并发模型、信号处理及数据收发。
+### 技术点：
 
-#### 3.1数据库
+#### 客户端服务端如何通信
 
-首先创建数据库，添加**用户表**user,包含id、用户名、密码、创建时间、最后登录时间等。通过md5加密，保证用户数据安全。
+​	最基本的udp通信方式。
 
-```mysql
-create table user (
-    id bigint unsigned AUTO_INCREMENT primary key,
-    username varchar (30),
-    passwd varchar(30),
-	Createtime DATETIME,
-	LastLoginTime DATETIME)ENGINE=InnoDB DEFAULT CHARSET=utf8;
-```
+​	其中：
 
-![image-20210806115554903](C:\Users\user\Desktop\设计文档.assets\image-20210806115554903.png)
+​		客户端（windows qt）：QUdpSocket
+
+​		服务端（Linux）：socket(), bind(), recvfrom(), sendto();
+
+#### 如何采集、播放音频
+
+​	QAudioInput、QAudioOutput、QAudioFormat、QIODevice
+
+#### 服务器如何收发数据
+
+​	每收到一个客户端发送的音频数据帧都转发给其他客户端（转发前打上标记，标明来自哪个客户端）
+
+#### 如何合成音频
+
+​	为每个其他客户端都维护一个缓冲队列，每次播放音频帧时，都从每个队列的队首获取一个音频帧，将它们加权平均，权值的设置可实现**调节音量**的效果
+
+![image-20210809100459156](C:\Users\user\AppData\Roaming\Typora\typora-user-images\image-20210809100459156.png)
+
+### 服务器和客户端的通信
+
+例如：
+服务端收到客户端的消息：
+	“请求登录” 用户名:h20282, 密码:123456
+	“请求注册” 用户名:h20282, 密码:123456
+	“查询房间列表”
+	“查询某房间的成员列表” 房间id:123456
+	“解散房间” 
+	“静音用户” 被静音用户:h20282
+	“转让房主” 接手人:h20282
+	“退出房间”
 
 
 
-调用c++数据库。封装成数据库连接池，单例模式获得实例。向信号处理及数据收发模块提供Init、GetConnection、QueryData、UpdateData等接口函数。
+客户端收到服务端的消息：
+	“你已成为房主”
+	“你已被静音”
+	“你已被踢出”
 
-```c++
-//初始化操作，参数有用户名、密码、数据库名、端口号、最大连接数量、是否开启日志等
-void Init(string userName, string passWd, string dataBaseName, int Port, int MaxConn, int close_log); 
-//单例模式获取数据库连接
-MYSQL *GetConnection();		
-//释放连接
-bool ReleaseConnection(MYSQL *conn); 
-//获取连接
-int GetFreeConn();	
-//销毁所有连接
-void DestroyPool();		
-//查询数据
-int QueryData(char* queryStr,int nColumn,list<string>& lst);
-//更新数据
-int UpdateData(char *updateStr);
-```
+#### 接口
 
-#### 3.2基于epoll的高并发模型
+针对以上通信需求，我们需要如下接口：
 
-对信号处理及数据收发模块提供thread_pool(线程池连接)、eventListen(事件监听)、eventLoop(事件循环)、dealclinetdata(客户端连接)、dealwithsignal(信号处理)、dealwithread(读内容)、dealwithwrite(写内容)、close(关闭连接)。
+|   接口名称   |   传入参数   |  返回值  |
+| :----------: | :----------: | :------: |
+|     注册     | 用户名、密码 | 是否成功 |
+|     登录     | 用户名、密码 | 是否成功 |
+| 查询在线列表 |      无      | 在线列表 |
+|   创建房间   |      无      |    无    |
+| 查询房间列表 |      无      | 房间列表 |
+|   解散房间   |    房间id    | 是否成功 |
+|   加入房间   |    房间id    | 人员列表 |
+|  主持人转让  |   接手人id   |          |
+|   踢出用户   |   被踢人id   | 是否成功 |
+|   静音用户   | 被静音用户id | 是否成功 |
+|   退出房间   |      无      | 是否成功 |
+|              |              |          |
 
-```c++
-//初始化线程池，便于客户端连接后分配线程处理
-void thread_pool();
-//封装服务器监听部分函数
-void eventListen() {
-    m_listenfd = socket(PF_INET, SOCK_STREAM, 0);
-    ret = bind(m_listenfd, (struct sockaddr *)&address, sizeof(address));
-    ret = listen(m_listenfd, 5);
-    m_epollfd = epoll_create(5);
-    addfd(m_epollfd, m_listenfd, false, m_LISTENTrigmode);
-}
-//epoll事件主循环,封装dealclinetdata(客户端连接)、dealwithsignal(信号处理)、dealwithread(读内容)、dealwithwrite(写内容)函数。
-void eventLoop() {
-    int number = epoll_wait(m_epollfd, events, MAX_EVENT_NUMBER, -1);
-    for (int i = 0; i < number; i++)
-        {
-            int sockfd = events[i].data.fd;
-            //处理新到的客户连接
-            if (sockfd == m_listenfd)
-                dealclinetdata();
-            //处理信号
-            else if ((sockfd == m_pipefd[0]) && (events[i].events & EPOLLIN))
-                dealwithsignal(timeout, stop_server);
-            //处理客户连接上接收到的数据
-            else if (events[i].events & EPOLLIN)
-                dealwithread(sockfd);
-            else if (events[i].events & EPOLLOUT)
-                dealwithwrite(sockfd);
-        }
-}
-//关闭连接
-void close(int fd);
-```
+服务端向客户端发送的消息
 
-#### 3.3信号处理及数据收发
+|      消息      |
+| :------------: |
+|  你已成为房主  |
+|   你已被静音   |
+| 你已被移出房间 |
 
-- 登录请求，从数据库中验证登录信息，将结果返回给客户端
-- 注册请求，从数据库中验证登录信息，将结果返回给客户端
-- 创建房间请求，服务器在内存中用unordered_map保存进行验证，将结果返回给客户端。
-- 加入房间请求，验证后将结果返回给客户端。
-- 退出房间请求，验证后将结果返回给客户端。
-- 接收多个客户端音频数据，转发给每一个客户端
-- 发送房间用户列表给客户端
+### 角色
 
-```c++
-//验证登录请求，将结果返回给客户端
-void LoginrReq(int clientFd,char* buffer,int len);
-//验证注册请求，将结果返回给客户端
-void RegisterReq(int clientFd,char* buffer,int len);
-//验证创建房间请求，将结果返回给客户端
-void CreateRoomReq(int clientFd,char* buffer,int len);
-//验证加入房间请求，将结果返回给客户端
-void JoinRoomReq(int clientFd,char* buffer,int len);
-//验证退出房间请求，将结果返回给客户端
-void QuitReq(int clientFd,char* buffer,int len);
-//处理多个客户端的音频数据，将音频数据解码后返回给每一个客户端
-void DealAudioData(int clientFd,char* buffer,int len);
-//发送房间用户列表给客户端
-void SendUserList(int userId);
-```
+
+
+##### **用户**
+
+![image-20210809093316001](C:\Users\user\AppData\Roaming\Typora\typora-user-images\image-20210809093316001.png)
+
+##### **房间**
+
+负责收发音频数据帧、管理房间内用户（房主、加入or离开房间、某是否静音）
+
+![image-20210809093112130](C:\Users\user\AppData\Roaming\Typora\typora-user-images\image-20210809093112130.png)
+
+##### **房间管理者**
+
+用于管理房间的创建
+
+![image-20210809093100886](C:\Users\user\AppData\Roaming\Typora\typora-user-images\image-20210809093100886.png)
+
+##### **请求处理者**
+
+用于处理来自客户端的各种请求
+
+![image-20210809093259689](C:\Users\user\AppData\Roaming\Typora\typora-user-images\image-20210809093259689.png)
 
 ### 四、总结
 
 
 
-
+分工、uml
 
 
 
