完善接口文档 type

--- a/doc/语音聊天室信令接口文档.md
+++ b/doc/语音聊天室信令接口文档.md
@@ -2,175 +2,175 @@
 
 ## 接口设计
 
-### 注册请求100
+### 注册请求
 
 example:
 
 ```json
 {
-    "type":,
+    "type": "request.regist",
     "userName":"gzh",
     "password":"123"
 }
 ```
 
-### 注册回复200
+### 注册回复
 
 example:
 
 ```json
 {
-    "type":,
+    "type": "reply.regist",
     "result":false,
     "msg":"用户名已占用/用户名非法/密码非法",
 }
 ```
 
-### 登录请求101
+### 登录请求
 
 example:
 
 ```json
 {
-    "type":,
+    "type": "request.login",
     "userName":"gzh",
     "password":"123"
 }
 ```
 
-### 登录回复201
+### 登录回复
 
 example:
 
 ```json
 {
-    "type":,
+    "type": "reply.login",
     "result":false,
     "msg":"密码错误/用户名不存在",
 }
 ```
 
-### 创建房间请求102
+### 创建房间请求
 
 example:
 
 ```json
 {
-    "type":,
+    "type": "request.createRoom",
     "password":"8888"
 }
 ```
 
-### 创建房间回复202
+### 创建房间回复
 
 example:
 
 ```json
 {
-    "type":,
+    "type": "reply.createRoom",
     "roomId":1234
 }
 ```
 
-### 创建房间广播302
+### 创建房间广播
 
 example:
 
 ```json
 {
-    "type":,
+    "type": "boardcast.createRoom",
     "roomId":1234,
     "passwordNeed":true,
     "ownerId":"gzh"
 }
 ```
 
-### 离开房间请求103
+### 离开房间请求
 
 房主离开房间时，房主自动转让给下一个用户
 example:
 
 ```json
 {
-    "type": 
+    "type": "request.leaveRoom"
 }
 ```
 
-### 离开房间回复203
+### 离开房间回复
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "reply.leaveRoom",
     "result": false,
     "msg":"状态错误：尚未加入房间"
 }
 ```
 
-### 离开房间广播303
+### 离开房间广播
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "boardcast.leaveRoom",
     "userId": "gzh"
 }
 ```
 
-### 加入房间请求104
+### 加入房间请求
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "request.joinRoom",
     "roomId": 1234,
     "password": "8888"
 }
 ```
 
-### 加入房间回复204
+### 加入房间回复
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "reply.joinRoom",
     "result": false,
     "msg": "密码错误/房间号不存在/你已被禁止加入"
 }
 ```
 
-### 加入房间广播304
+### 加入房间广播
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "boardcast.joinRoom",
     "userId": "gzh"
 }
 ```
 
-### 获取房间列表请求105
+### 获取房间列表请求
 
 example:
 
 ```json
 {
-    "type": 
+    "type": "request.getRoomList"
 }
 ```
 
-### 获取房间列表回复205
+### 获取房间列表回复
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "reply.getRoomList",
     "rooms": [
         {
             "roomId": 123,
@@ -211,104 +211,104 @@ example:
 }
 ```
 
-### 转让房主请求106
+### 转让房主请求
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "request.changeOwner",
     "to": "gzh"
 }
 ```
 
-### 转让房主回复206
+### 转让房主回复
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "reply.changeOwner",
     "result": false,
     "msg": "状态错误：未在房间内/用户未找到"
 }
 ```
 
-### 转让房主广播306
+### 转让房主广播
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "boardcast.changeOwner",
     "newOwner": "gzh"
 }
 ```
 
-### 踢出成员请求107
+### 踢出成员请求
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "request.kickUser",
     "userId": "gzh"
 }
 ```
 
-### 踢出成员回复207
+### 踢出成员回复
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "reply.kickUser",
     "result": false,
     "msg": "用户未找到/权限不足"
 }
 ```
 
-### 踢出成员广播307
+### 踢出成员广播
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "boardcast.kickUser",
     "userId": "gzh"
 }
 ```
 
-### 禁言请求108
+### 禁言请求
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "request.mute",
     "userId": "gzh"
 }
 ```
 
-### 禁言回复208
+### 禁言回复
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "reply.mute",
     "result": false,
     "msg": "用户未找到/权限不足"
 }
 ```
 
-### 禁言广播308
+### 禁言广播
 
 example:
 
 ```json
 {
-    "type": ,
+    "type": "boardcast.mute",
     "userId": 
 }
 ```
