--- a/doc/语音聊天室信令接口文档.md
+++ b/doc/语音聊天室信令接口文档.md
@@ -175,12 +175,14 @@ example:
         {
             "roomId": 123,
             "passwordNeed": true,
-            "userNum": 3
+            "userNum": 3,
+            "ownerId": "gzh"
         },
         {
             "roomId": 124,
             "passwordNeed": false,
-            "userNum": 3
+            "userNum": 3,
+            "ownerId": "gzh"
         }
     ]
 }
