文字聊天协议文档

--- a/doc/语音聊天室信令接口文档.md
+++ b/doc/语音聊天室信令接口文档.md
@@ -315,6 +315,30 @@ example:
 }
 ```
 
+### 文字聊天请求
+
+example:
+
+```json
+{
+    "type":"request.sendMsg",
+    "text":""
+}
+
+
+### 文字聊天广播
+
+example:
+
+```json
+
+{
+    "type":"boardcast.sendMsg",
+    "user":"456"
+    "text":"",
+}
+
+
 ## 类设计
 
 ### 服务端
