添加getUserList接口的文档

--- a/doc/语音聊天室信令接口文档.md
+++ b/doc/语音聊天室信令接口文档.md
@@ -194,7 +194,7 @@ example:
 
 ```json
 {
-    "type": ,
+    "type": "request.getUserList",
 }
 ```
 
@@ -206,10 +206,11 @@ example:
 {
     "type": ,
     "users": [
-        {
-            "userId": "gzh"
-        }
+        "userId": "gzh",
+        "userId": "ys",
+        "userId": "fda",
     ]
+    "ownerId": "gzh"
 }
 ```
 
